<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EncuentrAhorro</string>

    <!-- Strings related to login & login_tienda -->
    <string name="prompt_email">Nombre de Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bienvenida">Te damos la bienvenida a EncuentrAhorro</string>
    <string name="mejores_precios">Encuentra los mejores precios muy cerca de ti</string>
    <string name="bienvenida_tienda">Bienvenido a las tiendas registradas EncuentrAhorro</string>
    <string name="nombre_tienda">Nombre de la tienda</string>
    <string name="contrasena">Contraseña</string>
    <string name="btn_ingresar">INGRESAR</string>


    <!-- Valores de la interfaz "Publicar Recomendacion" -->
    <string name="tv_titulo_rec">Publicar Recomendación</string>
    <string name="tv_categoria">Categoría:</string>
    <string name="tv_tipoproducto">Tipo de Producto:</string>
    <string name="tv_otro">Otro:</string>
    <string name="et_otro">Otro</string>
    <string name="tv_precio">Precio: $</string>
    <string name="tv_descripcion">Descripción:</string>
    <string name="et_descripcion">Descripción del producto/servicio</string>
    <string name="tv_duracion">Duración:</string>
    <string name="tv_ubicacion">Ubicación:</string>
    <string name="bt_agregar_ubicacion">Agregar Ubicación</string>
    <string name="bt_recomendar">RECOMENDAR</string>
    <string name="toast_categoria">Selecciona una Categoría</string>
    <string name="toast_tipoproducto">Selecciona un Producto</string>
    <string name="toast_precio">Ingresa el Precio</string>
    <string name="toast_descripcion">Ingresa una Descripción</string>
    <string name="toast_duracion">Selecciona una Duración</string>

    <!-- Valores de la interfaz "Buscar" -->
    <string name="tv_titulo_bucar1">Búsqueda por producto</string>
    <string name="et_palabra_clave">Producto</string>
    <string name="btns_buscar">BUSCAR</string>
    <string name="tv_titulo_bucar2">Agrega filtros a tu búsqueda</string>
    <string name="tv_estado">Estado: </string>
    <string name="tv_ciudad">Ciudad: </string>
    <string name="tv_ordenarpor">Ordenar por: </string>
    <string name="rb_recientes">Más recientes</string>
    <string name="rb_populares">De mayor popularidad</string>
    <string name="title_activity__inicio">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Conocer más</string>

    <!-- Valores de la interfaz cambio de contraseña-->
    <string name="contrasenia">Contraseña</string>
    <string name="nueva_contrasenia">Nueva contraseña</string>
    <string name="repetir_contrasenia">Repetir Contraseña</string>
    <string name="cambiar">Cambiar</string>

    <!-- Valores de la interfaz de Perfil-->
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="cambiar_email">Cambiar email</string>
    <string name="_50_puntos">50 puntos</string>
    <string name="pro">Pro</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>

    <!-- Valores de la interfaz de Registro-->
    <string name="a_adir_foto">Añadir foto</string>
    <string name="al_crear_una_cuenta_confirmas_aceptar_nuestras">Al crear una cuenta confirmas aceptar nuestras reglas y políticas de privacidad</string>
    <string name="reglas_y_pol_ticas_de_privacidad">reglas y políticas de privacidad</string>
    <string name="acepto_terminos_y_condiciones">Acepto Terminos y Condiciones</string>
    <string name="ingresa">Ingresa el codigo de verificación</string>

    <!-- Valores de la interfaz de Validacion de codigo-->
    <string name="ingresa_el_codigo">Ingresa el codigo enviado a tu correo.</string>
    <string name="aceptar">Aceptar</string>


    <string name="nombre_de_usuario_email">nombre_usuario</string>
    <string name="email">correo</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--SDK de android-->
    <string name="facebook_app_id">501762847021436</string>
    <string name="fb_login_protocol_scheme">fb501762847021436</string>
    <string name="todo">TODO</string>
    <string name="politicas">Al continuar, aceptas las Condiciones de servicio y la politica de privacidad de EncuentrAhorro</string>
    <string name="errorFacebook">Error al iniciar sesión</string>
    <string name="cancelarFacebook">Acción Cancelada</string>


    <!-- API Key para el funcionamiento de GMaps -->
    <string name="google_maps_key">AIzaSyDwum3PNRs25Fo8OiHnuvXXw-2tmuiFL5E</string>

    <!-- Strings de detalle recomendacion -->
    <string name="productoDetalle">Producto</string>
    <string name="agregar_a_favoritos">Agregar a Favoritos</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="fecha">Fecha</string>
    <string name="precio">Precio</string>
    <string name="descripci_n">Descripción</string>
    <string name="evaluaciones">Evaluaciones:  </string>
    <string name="me_gusta">Me gusta:</string>
    <string name="me_gusta_detalle"># Me Gusta</string>
    <string name="comentarios_detalle">Comentarios:</string>
    <string name="comentarios"># Comentarios</string>
    <string name="comentarios_de_la_recomendaci_n">Comentarios de la Recomendación</string>
    <string name="ingresa_un_comentario">Ingresa un comentario</string>
    <string name="enviar_comentario">Enviar Comentario</string>


    <!--Strings de barra de navegacipn-->
    <string name="buscar">Buscar</string>
    <string name="favoritos">Favoritos</string>
    <string name="recomendaci_n">Recomendación</string>
    <string name="contrase_a">Cambiar contraseña</string>
    <string name="communicate">Communicate</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>


    <string name="title_activity__login_tienda">Iniciar Sesión</string>
    <string name="nombre_tiendaLogin">Nombre de la tienda</string>
    <string name="title_activity__inicio_tienda">Inicio</string>


</resources>
