<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Buscar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo_buscar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/tv_titulo_bucar1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_palabraclave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_palabraclave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:hint="@string/et_palabra_clave"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textColorLink="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/bt_buscar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/btns_buscar"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_titulo_buscar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_titulo_bucar2"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_estado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:text="@string/tv_estado" />

                <Spinner
                    android:id="@+id/sp_estado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_ciudad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:text="@string/tv_ciudad" />

                <Spinner
                    android:id="@+id/sp_ciudad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_ordenarpor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/tv_ordenarpor" />

            <RadioButton
                android:id="@+id/rb_recientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/rb_recientes"
                android:textColor="@android:color/tertiary_text_light"
                android:textColorLink="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rb_populares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/rb_populares"
                android:textColor="@android:color/tertiary_text_light"
                android:textColorLink="@color/colorPrimary" />

            <Button
                android:id="@+id/bt_buscar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:onClick="cambioInterfaz2"
                android:text="@string/btns_buscar"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>