<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_logo"
                    android:layout_width="match_parent"
                    android:layout_height="169dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/icono_login" />

                <TextView
                    android:id="@+id/tv_bienvenida_tienda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/bienvenida_tienda"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/nombre_tienda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/nombre_tienda"
                    android:inputType="text"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp" />

                <EditText
                    android:id="@+id/contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp" />

                <Button
                    android:id="@+id/btn_ingresar"
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:onClick="inicio"
                    android:text="@string/btn_ingresar"
                    android:textColor="@color/backgroundColor"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/terminos_condiciones"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/politicas"
                        android:textAlignment="center" />

                </LinearLayout>
<!--
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/profile_pic"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/profile_name"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/profile_email"
                    />
-->

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>